# capstone-project-team-17-1

./: .gitignore  MichelleZhouPersonalLog.md  NadeKangPersonalLog.md  ParsaPersonallog.md  README.md  ShuyuYanPersonalLog.md  TeamLog.md  YuxuanSunPersonalLog.md  capstone_git_log.txt  conftest.py  git_log.txt  main.py  package-lock.json  package.json  pyproject.toml  raunak_log.md  repo_meta.json  requirements-dev.txt  sample_project - Copy.py  sample_project.py
.demo_db/: capstone.db
COSC 499 Project/: index.html  index.js  package-lock.json  package.json
analysis_output/: metadata.jsonl  summary.json
config/: user_config.json
data/: capstone.db
demo_db/: capstone_backup.json  metrics.db
docs/: api.md
frontend/: package-lock.json  package.json
runtime_data/: capstone.db.bak-20260327-sienna-cleanup
scripts/: setup.ps1  setup.sh
src/: dataAccess.js  index.html  index.js  main.js  preload.js
templates/: resume_template.tex
test/: configStore.test.js  dataAccess.test.js  dbConnection.test.js  fileValidator.test.js  gitContributors.test.js  zipParser.test.js
tests/: conftest.py  test_analysis_modules.py  test_api_endpoints.py  test_api_incremental_upload.py  test_api_job_match.py  test_api_project_edits.py  test_api_projects_crud.py  test_api_resumes.py  test_api_snapshot_diff.py  test_auth_gating_matrix.py  test_auth_routes.py  test_autowriter_prompt.py  test_cli.py  test_cli_skill_timeline.py  test_cloud.py  test_cloud_storage.py  test_code_bundle.py  test_company_profile.py  test_company_qualities.py  test_config.py  test_consent.py  test_health.py  (+37 more)
(+184 files in other folders)
